--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
 		"type": "git",
 		"url": "git+https://github.com/Inrixia/gitClone.git"
 	},
+	"scripts": {
+		"build": "tsc && pkg ./dist/serial.js --out-path=./build -t latest-linux,latest-mac,latest-win --compress GZip"
+	},
 	"author": "Inrixia",
 	"license": "ISC",
 	"bugs": {
 		"url": "https://github.com/Inrixia/gitClone/issues"
 	},
 	"homepage": "https://github.com/Inrixia/gitClone#readme",
+	"dependencies": {
+		"@types/args": "^5.0.0",
+		"args": "^5.0.3",
+		"@octokit/core": "^4.1.0"
+	},
 	"devDependencies": {
-		"@octokit/core": "^3.5.1",
-		"@types/node": "^16.9.1",
-		"@typescript-eslint/eslint-plugin": "^4.31.1",
-		"@typescript-eslint/parser": "^4.31.1",
-		"eslint": "^7.32.0"
+		"@types/node": "^18.11.8",
+		"pkg": "^5.8.0",
+		"typescript": "^4.8.4"
 	}
 }
